Kleine Änderung am Text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div  ><img id="bild1" src="coderdojo.jpg"></div>
 		
 		<p  >Dies ist die Website des CoderDojo Karlsruhe. Hier werden Informationen  
-		bezüglich der Treffen bereitgestellt. Das erste Treffen wird am 14.03.2015 in einem  
-		Seminarraum (genau Angaben folgen) der Fakultät für Informatik am Kit stattfinden. 
+		bezüglich der Treffen bereitgestellt. Das erste Treffen wird am 14.03.2015 um 16:30 in einem  
+		Seminarraum der Fakultät für Informatik am Kit stattfinden. 
 		<p id="adr">Karlsruher Institut für Technologie (KIT)<br>
 		Fakultät für Informatik<br>
 		Gebäude 50.34<br>
