--- a/anmeldung.html
+++ b/anmeldung.html
@@ -11,15 +11,15 @@
 		
 		<div  id="Anmelden"> <h2>Anmelden und Mitmachen</h2> </div>
 		<p>
-		Um uns die Planung der Treffen zu erleichtern, sollte sich jeder der teilnehmen will  
+		Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will,  
 		vorher bei uns per <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a> anmelden. Wenn ihr das erste  
-		Mal kommt ist es auch gut für uns vorher zu wissen wie alt ihr seit und was für Vorkentnisse 
+		Mal kommt, ist es auch gut für uns vorher zu wissen, wie alt ihr seit und was für Vorkentnisse ihr
 		mitbringt. Vor allem jüngere Kinder (bis ca. 12 Jahre) sollten von ihren Eltern zu diesen  
 		Treffen begleitet werden. Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies  
 		nicht möglich, kann in Ausnahmefällen eine Lösung gefunden werden, sofern wir schon in der 
 		Anmeldungsmail Bescheid bekommen.<br>
 		Außerdem sollten bei der ersten Teilnahme die  
-		<a href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a> ausgedruck, ausgefüllt 
+		<a href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a> ausgedruckt, ausgefüllt 
 		und unterschrieben mitgebracht werden. 
 		
 		<div id="weg"><h2>Den Weg finden:</h2></div>
