--- a/codo.html
+++ b/codo.html
@@ -18,18 +18,18 @@
 		<div   id="warum"> <h2>Warum CoderDojo?</h2> </div>
 		<p  >
 		Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie mit den 
-		meisten Fähigkeiten ist es am Besten Programmieren schon in frühen Jahren zu lernen.  
+		meisten Fähigkeiten ist es am besten Programmieren schon in frühen Jahren zu lernen.  
 		Leider ist Programmieren noch kein fester Bestandteil im Schulalltag der Kinder.  
 		Wir wollen deshalb ein CoderDojo in Karlsruhe einrichten, um interessierten Kindern  
 		die Möglichkeit zu geben Programmieren zu lernen. In Deutschland gibt es derzeit schon  
 		ein paar CoderDojos, das uns am nächsten gelegene ist in <a href=https://coderdojohd.github.io>Heidelberg</a>.
 		</p>
 		
-		<div   id="das"> <h2>Das CoderDojo Model funktioniert wie folgt:</h2> </div>
+		<div   id="das"> <h2>Das CoderDojo Modell funktioniert wie folgt:</h2> </div>
 		
 		<p  >
 		Es finden alle ein bis zwei Wochen Treffen statt. 
-		Die Kinder und Jugendliche treffen sich mit den freiwilligen Mentoren aus technischen  
+		Die Kinder und Jugendlichen treffen sich mit den freiwilligen Mentoren aus technischen  
 		Bereichen bzw. Studenten, um zusammen zu programmieren und unter Anleitung ihre Fähigkeiten  
 		zu entwickeln und auszubauen. Alle in diesem Projekt mitwirkenden Mentoren engagieren sich  
 		ehrenamtlich und die Treffen sollen auch für alle Kinder kostenlos sein. 
