--- a/mentor.html
+++ b/mentor.html
@@ -13,6 +13,6 @@
 		<p  >
 		In unserem Fall handelt es sich zur Zeit bei den Mentoren ausschließlich um Studenten 
 		des KIT mit den Studiendfächern Informatik und Physik. So muss es aber nicht unbedingt  
-		bleiben, wir sind noch auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt  
+		bleiben! Wir sind noch auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt  
 		als Mentor beim CoderDojo Karlsruhe mitzumachen, schreibt uns einfach eine <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.
 	</body>
