--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>CoderDojo</title>
 		<link href="style.css" rel=stylesheet>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 
 	<body> 
