--- a/anmeldung.html
+++ b/anmeldung.html
@@ -15,8 +15,8 @@
 		Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will,  
 		vorher bei uns per <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a> anmelden. Wenn ihr das erste  
 		Mal kommt, ist es auch gut für uns vorher zu wissen, wie alt ihr seit und was für Vorkentnisse ihr
-		mitbringt. Vor allem jüngere Kinder (bis ca. 12 Jahre) sollten von ihren Eltern zu diesen  
-		Treffen begleitet werden. Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies  
+		mitbringt. Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen  
+		Treffen begleitet werden. Eltern älterer Kinder können aber auch gerne bleiben und das Dojo aktiv mitgestalten. Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies  
 		nicht möglich, kann in Ausnahmefällen eine Lösung gefunden werden, sofern wir schon in der 
 		Anmeldungsmail Bescheid bekommen.<br>
 		Außerdem sollten bei der ersten Teilnahme die  
