--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li><a href="anmeldung.html">Anmelden und Mitmachen?</a> </li>
 		<li><a href="mentor.html">Wie kann ich Mentor werden?</a> </li>
 		<li><a href="anmeldung.html#weg">Den Weg finden?</a> </li>
+		<li><a href="faqparents.html#weg">FAQ für Eltern?</a> </li>
 		
 		
 		</a>
