--- a/faqparents.html
+++ b/faqparents.html
@@ -11,41 +11,43 @@
 		<div  >
 		<img id="bild1" src="coderdojo.jpg"></div>
 		
-		<div id="weg"><h2>Ist CoderDojo das Richtige für mein Kind?</h2></div>
+		<div id="faq"><h2>FAQ für Eltern</h2></div>
+		
+		<div id="richtig"><h3>Ist CoderDojo das Richtige für mein Kind?</h3></div>
 		
 		Am einfachsten lässt sich das herausfinden, indem Sie das mit Ihrem Kind einfach mal ausprobieren! Wir erheben keine Teilnehmergebühr, verlangen kein Abo oder ähnliches, und wenn Ihr Kind Spaß bei uns hat, dann freuen wir uns, es wieder bei uns zu begrüßen!
 	
-		<div id="weg"><h2>Für welche Altersgruppe ist CoderDojo geeignet?</h2></div>
+		<div id="alter"><h3>Für welche Altersgruppe ist CoderDojo geeignet?</h3></div>
 		
 		Wir bieten das CoderDojo für Kinder und Jugendliche von 10 bis 18 Jahren an. Falls Ihr Kind jünger als 13 Jahre ist, müssen Sie es allerdings zu CoderDojo begleiten.
 		
-		<div id="weg"><h2>Kann mein Kind jederzeit dazu kommen, oder muss ich bis zum nächsten Durchgang warten?</h2></div>
+		<div id="wann"><h3>Kann mein Kind jederzeit dazu kommen, oder muss ich bis zum nächsten Durchgang warten?</h3></div>
 		
 		Bei uns kann man bei jedem Treffen einsteigen. Wir versuchen jedes Mal etwas für Anfänger als auch für Fortgeschrittene anzubieten.
 		
-		<div id="weg"><h2>Muss mein Kind schon programmieren können?</h2></div>
+		<div id="vorwissen"><h3>Muss mein Kind schon programmieren können?</h3></div>
 
 		Nein. Gerade das soll Ihr Kind ja bei uns lernen können! Wir wollen ein Umfeld bieten, in dem interessierte Kinder und Jugendliche gemeinsam etwas ausprobieren. Wir, die Mentoren, helfen weiter, wenn es zu knifflig wird.
 		Falls Ihr Kind schon programmieren kann, begleiten wir gerne die Schritte zu komplexeren Projekten.
 
-		<div id="weg"><h2>Was muss mein Kind sonst können?</h2></div>
+		<div id="sonst"><h3>Was muss mein Kind sonst können?</h3></div>
 		
 		Es ist einfacher, wenn Ihr Kind schon mal Computer bedient hat – aber auch das können wir schnell nachholen.
 		
-		<div id="weg"><h2>Was muss mein Kind mitbringen?</h2></div>
+		<div id="mitbringen"><h3>Was muss mein Kind mitbringen?</h3></div>
 		
 		Es wäre super wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie uns bitte bei der Anmeldung unbedingt Bescheid – wir versuchen dann ein Laptop zur Verfügung zu stellen.
 
-		<div id="weg"><h2>Was für eine Art Laptop braucht mein Kind?</h2></div>
+		<div id="art"><h3>Was für eine Art Laptop braucht mein Kind?</h3></div>
 	
 		Jedes Laptop mit einem Betriebssystem wie Windows, Mac OS oder Linux ist ausreichend. Das Laptop muss nicht neu oder besonders schnell sein. iPads, Android-Tablets oder Smartphones sind allerdings nicht zum Programmieren geeignet.
 	
-		<div id="weg"><h2>Ich kenne mich mit Computern nicht aus, kann ich trotzdem helfen?</h2></div>
+		<div id="helfen"><h3>Ich kenne mich mit Computern nicht aus, kann ich trotzdem helfen?</h3></div>
 		
 		Sehr gerne! Es gibt viele Dinge an einem Dojo, die nichts mit Computern zu tun haben. Je mehr Eltern mitmachen, desto mehr Zeit haben die Mentoren zum Helfen.
 		
-		<div id="weg"><h2>
-		Was wird unterrichtet? Gibt es einen Plan?</h2></div>
+		<div id="plan"><h3>
+		Was wird unterrichtet? Gibt es einen Plan?</h3></div>
 	
 		Wir haben einige spannende Projekte, die wir vorschlagen können. Allerdings richten wir uns da ganz nach den Kindern, sind offen für ihre Vorschläge und möchten wissen, was sie schon immer mal am Computer selbst ausprobieren wollten. Unsere Mentoren haben selbst ganz unterschiedliche Schwerpunkte und so können wir viele verschiedene Projekte begleiten.
 		<br>
