aendern des datums etc

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		
 		<p  >Dies ist die Website des CoderDojo Karlsruhe. Hier werden Informationen  
 		bezüglich der Treffen bereitgestellt. <br>
-		Das erste Treffen wird am <b>06.03.2015 um 16:30</b> in einem  
-		Seminarraum der Fakultät für Informatik am KIT stattfinden. 
+		Das nächste Treffen wird am <b>20.03.2015 von 16:30 Uhr bis 18:30 Uhr</b> im 
+		<b>Seminarraum 131</b> der Fakultät für Informatik am KIT stattfinden. 
 		<p id="adr">Karlsruher Institut für Technologie (KIT)<br>
 		Fakultät für Informatik<br>
 		Gebäude 50.34<br>
