--- a/index.html
+++ b/index.html
@@ -1,54 +1,264 @@
-<html>
+<!DOCTYPE html>
+<html lang="de">
 
-	<head>
-		<title>CoderDojo</title>
-		<link href="style.css" rel=stylesheet>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	</head>
+<head>
 
-	<body> 
-		<div>
-		
-		<div  ><img id="bild1" src="coderdojo.jpg"></div>
-		
-		<p  >Dies ist die Website des CoderDojo Karlsruhe. Hier werden Informationen  
-		bezüglich der Treffen bereitgestellt. <br>
-		Das nächste Treffen wird am <b>20.03.2015 von 16:30 Uhr bis 18:30 Uhr</b> im 
-		<b>Seminarraum 131</b> der Fakultät für Informatik am KIT stattfinden. 
-		<p id="adr">Karlsruher Institut für Technologie (KIT)<br>
-		Fakultät für Informatik<br>
-		Gebäude 50.34<br>
-		Am Fasanengarten 5<br>
-		76131 Karlsruhe
-		</p>
-		</p>
-		
-		<h2>Du hast noch Fragen?</h2>
-		<a id="link">
-		<li><a href="codo.html#was">Was ist ein CoderDojo?</a> </li>
-		<li><a href="codo.html#warum">Warum gibt es CoderDojos?</a> </li>
-		<li><a href="codo.html#das">Wie funktioniert ein CoderDojo?</a> </li>
-		<li><a href="anmeldung.html">Anmelden und Mitmachen?</a> </li>
-		<li><a href="mentor.html">Wie kann ich Mentor werden?</a> </li>
-		<li><a href="anmeldung.html#weg">Den Weg finden?</a> </li>
-		<li><a href="faqparents.html#weg">FAQ für Eltern?</a> </li>
-		
-		
-		</a>
-		
-		<h2>Termine</h2>
-		<p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät für Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt. 
-		
-		<li>Fr. 06.03.2015</li>
-		<li>Fr. 20.03.2015</li>
-		<li>Do. 02.04.2015</li>
-		<li>Fr. 10.04.2015</li>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Informationen zum CoderDojo Karlsruhe">
+    <meta name="author" content="CoderDojo Karlsruhe">
+    <meta name="keywords" content="CoderDojo,Karlsruhe,Programmieren,Schüler,Schueler,Kinder,Jugendliche,Schule,KIT,Informatik,Scratch,HTML,CSS,JavaScript,Java,PHP,C#,C,C++,Python">
+
+    <title>CoderDojo Karlsruhe</title>
+
+	<!-- Favicon -->
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	
-		</p>
-				
-				</p>	
-	</body>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/coderdojoka.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo" style="width: 30px; float: left; margin-right: 10px; margin-top: -5px"/> <span><span class="light">CoderDojo</span> Karlsruhe</span>
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">Info</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#events">Termine</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#faq">Fragen</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#join">Mitmachen</a>
+                    </li>
+					<li>
+                        <a class="page-scroll" href="#contact">Kontakt</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">CoderDojo</h1>
+						<h2 class="brand-heading">Karlsruhe</h2>
+                        <p class="intro-text">Dies ist die Website des CoderDojo Karlsruhe. Hier werden Informationen bezüglich der Treffen bereitgestellt.</p>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Was ist ein CoderDojo?</h2>
+                <p>CoderDojo ist eine weltweit verbreitete gemeinnützige Organisation, deren Ziel es ist Kindern und Jugendlichen Computer, Technik und besonders Programmieren näher zu bringen. Die Webseite dazu ist <a href=https://coderdojo.com/>hier</a> zu finden.</p>
+                <h2>Warum CoderDojo?</h2>
+                <p>Programmieren zu können ist eine Fähigkeit, die heutzutage immer wichtiger wird. Wie mit den meisten Fähigkeiten ist es am besten Programmieren schon in frühen Jahren zu lernen. Leider ist Programmieren noch kein fester Bestandteil im Schulalltag der Kinder. Wir wollen deshalb ein CoderDojo in Karlsruhe einrichten, um interessierten Kindern die Möglichkeit zu geben Programmieren zu lernen. In Deutschland gibt es derzeit schon ein paar CoderDojos, das uns am nächsten gelegene ist in <a href=https://coderdojohd.github.io>Heidelberg</a>.</p>
+				<h2>Wie funktioniert's?</h2>
+				<p>Es finden alle ein bis zwei Wochen Treffen statt. Die Kinder und Jugendlichen treffen sich mit den freiwilligen Mentoren aus technischen Bereichen bzw. Studenten, um zusammen zu programmieren und unter Anleitung ihre Fähigkeiten zu entwickeln und auszubauen. Alle in diesem Projekt mitwirkenden Mentoren engagieren sich ehrenamtlich und die Treffen sollen auch für alle Kinder kostenlos sein.</p>
+			</div>
+        </div>
+    </section>
+
+    <!-- Events Section -->
+    <section id="events" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Termine</h2>
+                <p>Das nächste Treffen wird am 20.03.2015 von 16:30 Uhr bis 18:30 Uhr im Seminarraum 131 der Fakultät für Informatik am KIT stattfinden.</p>
+                <p>Die unten aufgelisteten Termine finden alle im Gebäude 50.34 des KIT statt. Es gehört zur Fakultät für Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt.</p>
+                <div id="timeline">
+                    <div class="row timeline-movement">
+					    <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">06</span>
+                                <span class="timeline-balloon-date-month">MAR</span>
+                            </div>
+                        </a>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map" class="page-scroll">Seminarraum 131</a></div>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">20</span>
+                                <span class="timeline-balloon-date-month">MAR</span>
+                            </div>
+                        </a>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map" class="page-scroll">Seminarraum 131</a></div>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <div class="timeline-badge timeline-filter-movement">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">02</span>
+                                <span class="timeline-balloon-date-month">APR</span>
+                            </div>
+                        </a>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map" class="page-scroll">Seminarraum 131</a></div>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    </div>
+
+                    <div class="row timeline-movement">
+                        <a class="page-scroll" href="#join">
+                            <div class="timeline-badge">
+                                <span class="timeline-balloon-date-day">10</span>
+                                <span class="timeline-balloon-date-month">APR</span>
+                            </div>
+	                    </a>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map" class="page-scroll">Seminarraum 131</a></div>
+	                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    </div>
+
+                    <div class="timeline-badge timeline-future-movement">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Ist CoderDojo das Richtige für mein Kind?</h2>
+				<p>Am einfachsten lässt sich das herausfinden, indem Sie das mit Ihrem Kind einfach mal ausprobieren! Wir erheben keine Teilnehmergebühr, verlangen kein Abo oder ähnliches, und wenn Ihr Kind Spaß bei uns hat, dann freuen wir uns, es wieder bei uns zu begrüßen!</p>
+                <h2>Für welche Altersgruppe ist CoderDojo geeignet?</h2>
+				<p>Wir bieten das CoderDojo für Kinder und Jugendliche von 10 bis 18 Jahren an. Falls Ihr Kind jünger als 13 Jahre ist, müssen Sie es allerdings zu CoderDojo begleiten.</p>
+				<h2>Kann mein Kind jederzeit dazu kommen, oder muss ich bis zum nächsten Durchgang warten?</h2>
+				<p>Bei uns kann man bei jedem Treffen einsteigen. Wir versuchen jedes Mal etwas für Anfänger als auch für Fortgeschrittene anzubieten.</p>
+				<h2>Muss mein Kind schon programmieren können?</h2>
+				<p>Nein. Gerade das soll Ihr Kind ja bei uns lernen können! Wir wollen ein Umfeld bieten, in dem interessierte Kinder und Jugendliche gemeinsam etwas ausprobieren. Wir, die Mentoren, helfen weiter, wenn es zu knifflig wird. Falls Ihr Kind schon programmieren kann, begleiten wir gerne die Schritte zu komplexeren Projekten.</p>
+				<h2>Was muss mein Kind sonst können?</h2>
+				<p>Es ist einfacher, wenn Ihr Kind schon mal Computer bedient hat – aber auch das können wir schnell nachholen.</p>
+				<h2>Was muss mein Kind mitbringen?</h2>
+				<p>Es wäre super wenn Ihr Kind einen Laptop mitbringen könnte. Wenn das nicht möglich ist, sagen Sie uns bitte bei der Anmeldung unbedingt Bescheid – wir versuchen dann ein Laptop zur Verfügung zu stellen.</p>
+				<h2>Was für eine Art Laptop braucht mein Kind?</h2>
+				<p>Jedes Laptop mit einem Betriebssystem wie Windows, Mac OS oder Linux ist ausreichend. Das Laptop muss nicht neu oder besonders schnell sein. iPads, Android-Tablets oder Smartphones sind allerdings nicht zum Programmieren geeignet.</p>
+				<h2>Ich kenne mich mit Computern nicht aus, kann ich trotzdem helfen?</h2>
+				<p>Sehr gerne! Es gibt viele Dinge an einem Dojo, die nichts mit Computern zu tun haben. Je mehr Eltern mitmachen, desto mehr Zeit haben die Mentoren zum Helfen.</p>
+				<h2>Was wird unterrichtet? Gibt es einen Plan?</h2>
+				<p>Wir haben einige spannende Projekte, die wir vorschlagen können. Allerdings richten wir uns da ganz nach den Kindern, sind offen für ihre Vorschläge und möchten wissen, was sie schon immer mal am Computer selbst ausprobieren wollten. Unsere Mentoren haben selbst ganz unterschiedliche Schwerpunkte und so können wir viele verschiedene Projekte begleiten.</p>
+            </div>
+        </div>
+    </section>
+
+	<!-- Join Section -->
+    <section id="join" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Wie mache ich mit?</h2>
+                <p>Um uns die Planung der Treffen zu erleichtern, sollte sich jeder, der teilnehmen will, vorher bei uns per <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a> anmelden. Wenn ihr das erste Mal kommt, ist es auch gut für uns vorher zu wissen, wie alt ihr seit und was für Vorkentnisse ihr mitbringt.</p>
+				<p>Vor allem jüngere Kinder (bis ca. 12 Jahre) müssen von ihren Eltern zu diesen Treffen begleitet werden. Eltern älterer Kinder können aber auch gerne bleiben und das Dojo aktiv mitgestalten.</p>
+				<p>Die Teilnehmer sollten einen eigenen Laptop mitbringen. Ist dies nicht möglich, kann in Ausnahmefällen eine Lösung gefunden werden, sofern wir schon in der Anmeldungsmail Bescheid bekommen.</p>
+		        <p>Außerdem sollten bei der ersten Teilnahme die <a href="Teilnahmebedingungen.pdf">Teilnahmebedingungen</a> ausgedruckt, ausgefüllt und unterschrieben mitgebracht werden.</p>
+				<br>
+				<h2>Wie werde ich Mentor?</h2>
+				<p>In unserem Fall handelt es sich zur Zeit bei den Mentoren ausschließlich um Studenten des KIT mit den Studiendfächern Informatik und Physik. So muss es aber nicht unbedingt bleiben! Wir sind noch auf der Suche nach weiteren Mentoren. Falls ihr Interesse habt als Mentor beim CoderDojo Karlsruhe mitzumachen, schreibt uns einfach eine <a href="mailto:coderdojo.karlsruhe@gmail.com">Mail</a>.</p>
+            </div>
+        </div>
+    </section>
+	
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Kontakt</h2>
+				<p>Karlsruher Institut für Technologie (KIT)<br>
+				Fakultät für Informatik<br>
+				Gebäude 50.34<br>
+				Am Fasanengarten 5<br>
+				76131 Karlsruhe</p>
+                <p><a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a></p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Map Section -->
+    <div id="map">
+	</div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; CoderDojo Karlsruhe 2015</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+
+    <!-- Google Maps API -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/coderdojoka.js"></script>
+
+</body>
 
 </html>
