Sensor Parameter von Google Maps nicht mehr benötigt

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
 <!-- Google Maps API -->
 <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA"></script>
 
 <!-- Custom Theme JavaScript -->
 <script src="js/coderdojoka.js"></script>
