--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-61795572-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -186,10 +195,10 @@
                         </div>
                     </a>
 
-                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map"
+                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
                                                                                             class="page-scroll">Seminarraum
                         236</a></div>
-                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
                 </div>
 				
 				 <div class="row timeline-movement">
@@ -200,10 +209,10 @@
                         </div>
                     </a>
 
-                    <div class="col-xs-6 timeline-item"><span class="question">Wo?</span><a href="#map"
+                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
                                                                                             class="page-scroll">Seminarraum
                         236</a></div>
-                    <div class="col-xs-6 timeline-item"><span class="question">Wann?</span>16:30 - 18:30</div>
+                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
                 </div>
 
 				<div class="row">
