Neue Termine für die Webseite

--- a/index.html
+++ b/index.html
@@ -177,33 +177,8 @@
                 Informatik, die uns den Seminarraum für unsere Treffen zur Verfügung stellt.</p>
 
             <div id="timeline">
-                <div class="row timeline-movement">
-                    <a class="page-scroll" href="#join">
-                        <div class="timeline-badge">
-                            <span class="timeline-balloon-date-day">02</span>
-                            <span class="timeline-balloon-date-month">APR</span>
-                        </div>
-                    </a>
-
-                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
-                                                                                            class="page-scroll">Seminarraum
-                        131</a></div>
-                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
-                </div>
-
-                <div class="row timeline-movement">
-                    <a class="page-scroll" href="#join">
-                        <div class="timeline-badge">
-                            <span class="timeline-balloon-date-day">10</span>
-                            <span class="timeline-balloon-date-month">APR</span>
-                        </div>
-                    </a>
-
-                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
-                                                                                            class="page-scroll">Seminarraum
-                        131</a></div>
-                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
-                </div>
+               
+		
 
 				 <div class="row timeline-movement">
                     <a class="page-scroll" href="#join">
@@ -238,6 +213,49 @@
                         236</a></div>
                     <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
                 </div>
+
+
+
+
+ <div class="row timeline-movement">
+                    <a class="page-scroll" href="#join">
+                        <div class="timeline-badge">
+                            <span class="timeline-balloon-date-day">22</span>
+                            <span class="timeline-balloon-date-month">MAI</span>
+                        </div>
+                    </a>
+
+                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                            class="page-scroll">Seminarraum
+                        236</a></div>
+                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
+                </div>
+
+
+
+
+ <div class="row timeline-movement">
+                    <a class="page-scroll" href="#join">
+                        <div class="timeline-badge">
+                            <span class="timeline-balloon-date-day">05</span>
+                            <span class="timeline-balloon-date-month">JUNI</span>
+                        </div>
+                    </a>
+
+                    <div class="col-sm-6 timeline-item timeline-item-first"><span class="question">Wo?</span><a href="#map"
+                                                                                            class="page-scroll">Seminarraum
+                        236</a></div>
+                    <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
+                </div>
+
+
+
+
+
+
+
+
+
 
 				<div class="row">
 					<div class="timeline-badge timeline-future-movement">
