Kleine Verbesserung der Darstellung

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <div class="col-sm-6 timeline-item timeline-item-last"><span class="question">Wann?</span>16:30 - 18:30</div>
                     </div>
 
-                    <div class="row">
+                    <div class="row timeline-row-future">
                         <div class="timeline-badge timeline-future-movement">
                             <span class="glyphicon glyphicon-plus"></span>
                         </div>
