--- a/index.html
+++ b/index.html
@@ -394,9 +394,15 @@
                 <h2>Kontakt</h2>
 
                 <p>
+                    CoderDojo Karlsruhe<br>
+                    c/o AStA KIT<br>
+                    Adenauerring 7<br>
+                    76131 Karlsruhe<br>
+                </p>
+
+                <p>
                     Beim Fragen und Anregungen wenden Sie sich einfach per Mail an:
                     <a href="mailto:coderdojo.karlsruhe@gmail.com">coderdojo.karlsruhe@gmail.com</a></p>
-
 
                 <br>
 
