--- a/material.html
+++ b/material.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
           content="CoderDojo,Karlsruhe,Programmieren,Schüler,Schueler,Kinder,Jugendliche,Schule,KIT,Informatik,Scratch,HTML,CSS,JavaScript,Java,PHP,C#,C,C++,Python">
 
-    <title>CoderDojo Karlsruhe</title>
+    <title>CoderDojo Karlsruhe - Material</title>
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -62,11 +62,12 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
+            <span><a class="navbar-brand page-scroll" href="/">
                 <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo"
                      style="width: 30px; float: left; margin-right: 10px; margin-top: -5px"/> <span><span
                     class="light">CoderDojo</span> Karlsruhe</span>
             </a>
+			<span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i></span><a class="navbar-breadcrumb" href="#page-top">Material</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
