--- a/material.html
+++ b/material.html
@@ -62,12 +62,12 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <i class="fa fa-bars"></i>
             </button>
-            <span><a class="navbar-brand page-scroll" href="/">
+            <span><a class="navbar-brand" href="/">
                 <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo"
                      style="width: 30px; float: left; margin-right: 10px; margin-top: -5px"/> <span><span
                     class="light">CoderDojo</span> Karlsruhe</span>
             </a>
-			<span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i></span><a class="navbar-breadcrumb" href="#page-top">Material</a>
+			<span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i></span><a class="navbar-breadcrumb page-scroll" href="#page-top">Material</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -366,10 +366,6 @@
 
 <!-- Plugin JavaScript -->
 <script src="js/jquery.easing.min.js"></script>
-
-<!-- Google Maps API -->
-<script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANKFqb2CrR93rUb6kfU6XnqepBGJoFk0M"></script>
 
 <!-- Custom Theme JavaScript -->
 <script src="js/coderdojoka.js"></script>
