Brotkrümelnavigation für Darstellung auf kleinen Bildschirmen optimiert

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
                 <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo"
-                     style="width: 30px; float: left; margin-right: 10px; margin-top: -5px"/> <span><span class="light">CoderDojo</span> Karlsruhe</span>
+                    class="navbar-brand-logo"/> <span id="navbar-brand-name"><span
+                    class="light">CoderDojo</span> Karlsruhe</span>
             </a>
         </div>
 
