--- a/material.html
+++ b/material.html
@@ -64,7 +64,7 @@
             </button>
             <span><a class="navbar-brand" href="/">
                 <img src="img/logo.png" alt="CoderDojo Karlsruhe Logo"
-                     style="width: 30px; float: left; margin-right: 10px; margin-top: -5px"/> <span><span
+                     class="navbar-brand-logo"/> <span id="navbar-brand-name-collapse"><span
                     class="light">CoderDojo</span> Karlsruhe</span>
             </a>
 			<span class="navbar-breadcrumb navbar-breadcrumb-sep"><i class="fa fa-angle-double-right"></i></span><a class="navbar-breadcrumb page-scroll" href="#page-top">Material</a>
