Verlinken der Satzung

--- a/material.html
+++ b/material.html
@@ -354,6 +354,7 @@
 <footer>
     <div class="container text-center">
         <p>Copyright &copy; CoderDojo Karlsruhe 2015</p>
+		<p><span style="font-size:16px;"><a href="https://www.sharelatex.com/github/repos/coderdojoka/satzung-hochschulgruppe/builds/latest/output.pdf">Satzung</a> (<a href="https://github.com/coderdojoka/satzung-hochschulgruppe">Github</a>)</span></p>
     </div>
 </footer>
 
