--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@
                 <li>
                     <a class="page-scroll" href="#join">Mitmachen</a>
                 </li>
+                <li class="visible-xs">
+                    <a href="/material.html">Material</a>
+                </li>
+                <li class="dropdown hidden-xs">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/material.html">Material</a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/material.html#about">Scratch</a>
+                        </li>
+                        <li>
+                            <a href="/material.html#events">Python</a>
+                        </li>
+                        <li>
+                            <a href="/material.html#faq">HTML</a>
+                        </li>
+                        <li>
+                            <a href="/material.html#join">Java</a>
+                        </li>
+                    </ul>
+                </li>
                 <li>
                     <a class="page-scroll" href="#contact">Kontakt</a>
                 </li>
