--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
                     <a href="/material.html">Material</a>
                 </li>
                 <li class="dropdown hidden-xs">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="/material.html">Material</a>
+                    <a class="dropdown-toggle" href="/material.html">Material</a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="/material.html#about">Scratch</a>
+                            <a href="/material.html#scratch">Scratch</a>
                         </li>
                         <li>
-                            <a href="/material.html#events">Python</a>
+                            <a href="/material.html#python">Python</a>
                         </li>
                         <li>
-                            <a href="/material.html#faq">HTML</a>
+                            <a href="/material.html#html">HTML</a>
                         </li>
                         <li>
-                            <a href="/material.html#join">Java</a>
+                            <a href="/material.html#java">Java</a>
                         </li>
                     </ul>
                 </li>
