Da das Gürtelsystem noch nicht eingeführt wird, habe ich es in Stufen umbenannt, um Verwirrung zu vermeiden

--- a/material.html
+++ b/material.html
@@ -186,12 +186,12 @@
 
 
                 <div>
-                    <h2>Python Gürtel</h2>
+                    <h2>Python Stufen</h2>
                     <ul class="nav nav-tabs">
-                        <li class="active"><a data-toggle="tab" href="#yellow">Gelber Gürtel</a></li>
-                        <li><a data-toggle="tab" href="#red">Roter Gürtel</a></li>
-                        <li><a data-toggle="tab" href="#purple">Lila Gürtel</a></li>
-                        <li><a data-toggle="tab" href="#black">Schwarzer Gürtel</a></li>
+                        <li class="active"><a data-toggle="tab" href="#yellow">Grundlagen</a></li>
+                        <li><a data-toggle="tab" href="#red">Fortgeschrittene Grundlagen</a></li>
+                        <li><a data-toggle="tab" href="#purple">Klassen und OOP</a></li>
+                        <li><a data-toggle="tab" href="#black">Eigenes Projekt</a></li>
                     </ul>
 
                     <div class="tab-content belt_container">
