--- a/index.html
+++ b/index.html
@@ -382,6 +382,8 @@
 <footer>
     <div class="container text-center">
         <p>Copyright &copy; CoderDojo Karlsruhe 2015</p>
+		<p><a class="twitter-follow-button" href="https://twitter.com/CoderDojoKa" data-show-count="false">Follow @CoderDojoKa</a></p>
+		<div class="fb-like" data-href="https://facebook.com/pages/CoderDojo-Karlsruhe/1455190411441732" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
 		<p><span style="font-size:16px;"><a href="https://www.sharelatex.com/github/repos/coderdojoka/satzung-hochschulgruppe/builds/latest/output.pdf">Satzung</a> (<a href="https://github.com/coderdojoka/satzung-hochschulgruppe">Github</a>)</span></p>
     </div>
 </footer>
@@ -398,6 +400,31 @@
 <!-- Google Maps API -->
 <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANKFqb2CrR93rUb6kfU6XnqepBGJoFk0M"></script>
+
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+ 
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+ 
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 <!-- Custom Theme JavaScript -->
 <script src="js/coderdojoka.js"></script>
