--- a/material.html
+++ b/material.html
@@ -141,6 +141,18 @@
                     lernende Programmiersprache, mit der man sofort erste Erfolge erzielen kann.
                     Man kann direkt im Browser anfangen zu programmieren, es muss nichts installiert werden.
                 </p>
+
+                <h3>Nützliche links</h3>
+                <p>
+                    Das deutsche Scratch Wiki:
+                    <a href="http://scratch-dach.info/wiki/Hauptseite">http://scratch-dach.info/wiki/Hauptseite</a>
+                </p>
+
+                <h3>Tutorials</h3>
+                <p>
+                Ein Tutorial, dass dir erklärt wie Scrolling (z.B. wie bei Super Mario) funktioniert:
+                <a href="https://scratch.mit.edu/projects/69082160/">https://scratch.mit.edu/projects/69082160/</a>
+                </p>
             </div>
         </div>
     </div>
